study/bison/scanner/y.output
Grammar

    0 $accept: S $end

    1 S: Stmt
    2  | S Stmt

    3 Stmt: T_Identifier '=' E ';'
    4     | T_IF
    5     | T_WHILE ';'
    6     | T_CON
    7     | T_BLOCK ';'

    8 E: E '+' E
    9  | E '-' E
   10  | E '*' E
   11  | E '/' E
   12  | '-' E
   13  | T_IntConstant
   14  | T_Identifier
   15  | '(' E ')'

   16 T_CON: T_IF '(' T_Identifier ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 16
    ')' (41) 15 16
    '*' (42) 10
    '+' (43) 8
    '-' (45) 9 12
    '/' (47) 11
    ';' (59) 3 5 7
    '=' (61) 3
    error (256)
    T_IF <strval> (258) 4 16
    T_WHILE <strval> (259) 5
    T_BLOCK <strval> (260) 7
    T_IntConstant <strval> (261) 13
    T_Identifier <strval> (262) 3 14 16
    U_neg (263)


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    S (18)
        on left: 1 2
        on right: 0 2
    Stmt (19)
        on left: 3 4 5 6 7
        on right: 1 2
    E (20)
        on left: 8 9 10 11 12 13 14 15
        on right: 3 8 9 10 11 12 15
    T_CON <strval> (21)
        on left: 16
        on right: 6


State 0

    0 $accept: • S $end

    T_IF          shift, and go to state 1
    T_WHILE       shift, and go to state 2
    T_BLOCK       shift, and go to state 3
    T_Identifier  shift, and go to state 4

    S      go to state 5
    Stmt   go to state 6
    T_CON  go to state 7


State 1

    4 Stmt: T_IF •
   16 T_CON: T_IF • '(' T_Identifier ')'

    '('  shift, and go to state 8

    $default  reduce using rule 4 (Stmt)


State 2

    5 Stmt: T_WHILE • ';'

    ';'  shift, and go to state 9


State 3

    7 Stmt: T_BLOCK • ';'

    ';'  shift, and go to state 10


State 4

    3 Stmt: T_Identifier • '=' E ';'

    '='  shift, and go to state 11


State 5

    0 $accept: S • $end
    2 S: S • Stmt

    $end          shift, and go to state 12
    T_IF          shift, and go to state 1
    T_WHILE       shift, and go to state 2
    T_BLOCK       shift, and go to state 3
    T_Identifier  shift, and go to state 4

    Stmt   go to state 13
    T_CON  go to state 7


State 6

    1 S: Stmt •

    $default  reduce using rule 1 (S)


State 7

    6 Stmt: T_CON •

    $default  reduce using rule 6 (Stmt)


State 8

   16 T_CON: T_IF '(' • T_Identifier ')'

    T_Identifier  shift, and go to state 14


State 9

    5 Stmt: T_WHILE ';' •

    $default  reduce using rule 5 (Stmt)


State 10

    7 Stmt: T_BLOCK ';' •

    $default  reduce using rule 7 (Stmt)


State 11

    3 Stmt: T_Identifier '=' • E ';'

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 19


State 12

    0 $accept: S $end •

    $default  accept


State 13

    2 S: S Stmt •

    $default  reduce using rule 2 (S)


State 14

   16 T_CON: T_IF '(' T_Identifier • ')'

    ')'  shift, and go to state 20


State 15

   13 E: T_IntConstant •

    $default  reduce using rule 13 (E)


State 16

   14 E: T_Identifier •

    $default  reduce using rule 14 (E)


State 17

   12 E: '-' • E

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 21


State 18

   15 E: '(' • E ')'

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 22


State 19

    3 Stmt: T_Identifier '=' E • ';'
    8 E: E • '+' E
    9  | E • '-' E
   10  | E • '*' E
   11  | E • '/' E

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    ';'  shift, and go to state 27


State 20

   16 T_CON: T_IF '(' T_Identifier ')' •

    $default  reduce using rule 16 (T_CON)


State 21

    8 E: E • '+' E
    9  | E • '-' E
   10  | E • '*' E
   11  | E • '/' E
   12  | '-' E •

    $default  reduce using rule 12 (E)


State 22

    8 E: E • '+' E
    9  | E • '-' E
   10  | E • '*' E
   11  | E • '/' E
   15  | '(' E • ')'

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    ')'  shift, and go to state 28


State 23

    8 E: E '+' • E

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 29


State 24

    9 E: E '-' • E

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 30


State 25

   10 E: E '*' • E

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 31


State 26

   11 E: E '/' • E

    T_IntConstant  shift, and go to state 15
    T_Identifier   shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 18

    E  go to state 32


State 27

    3 Stmt: T_Identifier '=' E ';' •

    $default  reduce using rule 3 (Stmt)


State 28

   15 E: '(' E ')' •

    $default  reduce using rule 15 (E)


State 29

    8 E: E • '+' E
    8  | E '+' E •
    9  | E • '-' E
   10  | E • '*' E
   11  | E • '/' E

    '*'  shift, and go to state 25
    '/'  shift, and go to state 26

    $default  reduce using rule 8 (E)


State 30

    8 E: E • '+' E
    9  | E • '-' E
    9  | E '-' E •
   10  | E • '*' E
   11  | E • '/' E

    '*'  shift, and go to state 25
    '/'  shift, and go to state 26

    $default  reduce using rule 9 (E)


State 31

    8 E: E • '+' E
    9  | E • '-' E
   10  | E • '*' E
   10  | E '*' E •
   11  | E • '/' E

    $default  reduce using rule 10 (E)


State 32

    8 E: E • '+' E
    9  | E • '-' E
   10  | E • '*' E
   11  | E • '/' E
   11  | E '/' E •

    $default  reduce using rule 11 (E)
